change to scroll snap animation instead scrollevent, fix scroll on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,12 @@ body {
 
 h1 {
   font-size: 5rem;
+  text-shadow: 1px 1px 10px #9eafff;
 }
 
 h2 {
   font-size: 4rem;
+  text-shadow: 1px 1px 10px #9eafff;
 }
 
 p {
@@ -46,9 +48,9 @@ a {
   justify-content: space-between;
   background-color: var(--nav-bg);
   position: fixed;
+  padding: 1.5em 10em;
   top: 0;
   left: 0;
-  padding: 1.5em 10em;
   z-index: 1;
   width: 100%;
 }
@@ -103,27 +105,33 @@ nav i:hover,
 }
 
 main {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
+  height: 100%;
 }
 
 .wrapper {
-  height: 100%;
-  width: 100%;
-  transition: all 1.5s ease;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100vh;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  padding-top: 4.5rem;
+.wrapper::-webkit-scrollbar {
+  display: none;
 }
 
 section {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  height: -webkit-fill-available;
+  height: fill-available;
+  display: flex;
+  flex-direction: column;
+  scroll-snap-align: start;
+  padding-top: 4rem;
+}
+
+#home {
+  padding-top: 0;
 }
 
 .title h1 {
@@ -152,7 +160,7 @@ section {
 }
 
 #explore {
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
 }
 
 #about {
@@ -183,7 +191,7 @@ section {
 }
 
 .img {
-  width: 5em;
+  width: 3.5em;
   height: 29em;
   border-radius: 0.75rem;
   background-position: center;
@@ -323,7 +331,7 @@ footer {
   padding-bottom: 50px;
 }
 
-@media only screen and (max-width: 600px) {
+@media (min-width: 320px) and (max-width: 480px) {
   html {
     font-size: 10px;
   }
@@ -335,6 +343,13 @@ footer {
   .nav {
     flex-direction: row;
     padding: 1.5em 3em;
+  }
+
+  .wrapper {
+    scroll-snap-type: none;
+  }
+
+  section {
   }
 
   #title {
